--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: BoBNewz's Blog # the main title
 tagline: DFIR Analyst # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Cybersecurity blog :)
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -35,7 +35,7 @@ social:
   name: BoBNewz
   links:
     # The first element serves as the copyright owner's link
-    - https://github.com/username # change to your GitHub homepage
+    - https://github.com/BoBNewz # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
